--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title></title>
-	<script>window.location = "192.168.1.39:8080";</script>
+	<script>window.location = "http://192.168.1.39:8080";</script>
 </head>
 <body>
 
